<resources>
    <string name="app_name">校园生活助手</string>
    <string name="onclick_refresh">点击展开</string>
    <string name="app_drag_delete">拖动到此处删除</string>
    <string name="app_let_go_drag_delete">松手即可删除</string>
    <string-array name="city">
        <item>北京市</item>
        <item>天津市</item>
        <item>哈尔滨市</item>
        <item>大连市</item>
        <item>香港市</item>
    </string-array>
    <string name="item_example_number_title">第%02d条数据</string>
    <string name="item_example_number_abstract">这是测试的第%02d条数据</string>
    <string name="http_loading">加载中&#8230;</string>
    <string name="http_unknown_error">请求出错，未知错误</string>
    <string name="http_token_error">登录失效，请重新登录</string>
    <string name="http_data_explain_error">数据解析异常，请稍后</string>
    <string name="http_server_out_time">服务器请求超时，请稍后再试</string>
    <string name="http_network_error">请求失败，请检查网络设置</string>
    <string name="http_response_error">服务器响应异常，请稍后再试</string>
    <string name="http_server_error">服务器连接异常，请稍后再试</string>
    <string name="http_request_cancel">请求被中断，请重试</string>
    <string name="app_login">登&#160;&#160;&#160;&#160;录</string>
    <string name="app_register">注&#160;&#160;&#160;&#160;册</string>
    <string name="btn_guide_skip">跳过</string>
    <string name="login_register_title">校园生活助手</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="forgetpassword">忘记密码?</string>
    <string name="telNumberLogin">手机号快捷登录</string>
    <string name="apply_run_cer">申请跑腿认证</string>
    <string name="apply_run_commit">提交跑腿信息</string>
    <string name="apply_shop_commit">提交商家认证信息</string>
    <string name="apply_run_detail_info">跑腿入驻认证申请详情</string>
    <string name="apply_shop_detail_info">商家入驻认证申请详情</string>
    <string name="developer_system_safe_center">开发者后台系统管理中心</string>
    <string name="login">登\t\t\t\t\t录</string>
    <string name="no_account">没有账号？去注册</string>
    <string name="QQ">QQ快捷登录</string>
    <string name="weChat">微信快捷登录</string>
    <string name="please_input_user_name_password">请输入用户名和密码</string>
    <string name="sms_phone_code_fast_login">短信验证码快捷登录</string>
    <string name="please_input_user_name">请输入用户名</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_RealUsername">请输入真实姓名</string>
    <string name="please_input_Sex">请选择性别</string>
    <string name="please_input_id_card">请输入15位或18位身份证号</string>
    <string name="please_input_stu_no">请输入学号</string>
    <string name="please_input_tel">请输入11位数的手机号</string>
    <string name="please_input_qq_email">请输入QQ邮箱</string>
    <string name="please_input_phone_code">请输入6位数的短信验证码</string>
    <string name="please_input_bind_user_name">请输入绑定的用户名</string>
    <string name="please_input_bind_password">请输入密码</string>
    <string name="i_kown">我知道了</string>
    <string name="please_bind_User_login">，请您绑定账户后重试</string>
    <string name="please_bind_back_User_login">，请您返回登录主页绑定账户后重试</string>
    <string name="please_bind_qq_login">，请授权QQ后重试</string>
    <string name="please_bind_back_qq_login">，请您返回登录主页授权QQ后重试</string>
    <string name="qq_bing_success">QQ授权绑定成功</string>
    <string name="qq_bing_error">QQ授权绑定失败</string>
    <string name="register_username">用户名</string>
    <string name="register_password">密码</string>
    <string name="register_real_name">真实姓名</string>
    <string name="register_sex">性别</string>
    <string name="register_id_card">身份证号</string>
    <string name="register_stu_no">学号</string>
    <string name="register_tel">手机号</string>
    <string name="register_email">QQ邮箱</string>
    <string name="register_code">验证码</string>
    <string name="get_phone_code">获取验证码</string>
    <string name="register_success">注册成功！</string>
    <string name="KickOffLine">踢人下线</string>
    <string name="KickOffLine_realname">真实姓名</string>
    <string name="role_name">角色名称</string>
    <string name="permission_name">权限名称</string>
    <string name="role_info">角色描述</string>
    <string name="permission_info">权限描述</string>
    <string name="role_id">角色编号</string>
    <string name="permission_id">权限编号</string>
    <string name="user_id">用户编号</string>
    <string name="banned_day">封禁时长/天</string>
    <string name="KickOffLine_token">登录Token</string>
    <string name="KickOffLine_ok">确定执行</string>
    <string name="add_ok">确定添加</string>
    <string name="ok">确定</string>
    <string name="new_add_role">新增角色</string>
    <string name="search_role">搜索角色</string>
    <string name="search_permission">搜索权限</string>
    <string name="search_user">搜索用户</string>
    <string name="address_ok_add">确认添加</string>
    <string name="address_ok_update">确认编辑</string>
    <string name="search_user_permission">搜索用户权限</string>
    <string name="start_yes_cer">执行认证</string>
    <string name="search_certification">搜索认证</string>
    <string name="search_cer_run">搜索跑腿</string>
    <string name="search_cer_shop">搜索商家</string>
    <string name="if_delete_now_role">是否删除此角色</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="see_detail">查看详情</string>
    <string name="new_add_permission">新增权限</string>
    <string name="start_select">开始查询</string>
    <string name="start_un_ban">执行解封</string>
    <string name="dev_user_permission_explain">功能说明：通过角色编号查询该角色专属全部用户的信息
        \n(1 = 发布订单、2 = 接管订单、3 = 账户改密、4 = 举报账户)
        \n(5 = 意见反馈、6 = 踢人下线、7 = 封禁账户、8 = 通知公告)
        \n(9 = 角色管理、10 = 权限管理、11 = 用户管理、12 = 查看接口)
        \n(13 = 解封账户、14 = 查封状态、15 = 用户角色管理、16 = 角色权限管理)
        \n(17 = RSA密钥管理、18 = 用户角色权限管理)
    </string>
    <string name="welcome_guid_text_one_title">个&#8194;性&#8194;推&#8194;荐</string>
    <string name="welcome_guid_text_one_info">每&#8197;天&#8197;为&#8197;你&#8197;良&#8197;心&#8197;推&#8197;荐&#8197;最&#8197;合&#8197;口&#8197;味&#8197;的&#8197;好&#8197;音&#8197;乐</string>
    <string name="welcome_guid_text_two_title">精&#8197;彩&#8197;评&#8197;论</string>
    <string name="welcome_guid_text_two_info">9&#8197;亿&#8197;多&#8197;条&#8197;有&#8197;趣&#8197;的&#8197;故&#8197;事，听&#8197;歌&#8197;再&#8197;不&#8197;孤&#8197;单</string>
    <string name="welcome_guid_text_three_title">精&#8197;选&#8197;视&#8197;频</string>
    <string name="welcome_guid_text_three_info">音&#8197;乐&#8197;热&#8197;点，娱&#8197;乐&#8197;资&#8197;讯&#8197;尽&#8197;收&#8197;眼&#8197;底</string>
    <string name="my_info">我的信息</string>
    <string name="yes_or_no_select_user_info">是否查看该用户个人信息</string>
    <string name="my_shop">我的店铺</string>
    <string name="click_user_image">点击头像登录</string>
    <string name="signature">您还没有设置个性签名，点击头像设置</string>
    <string name="LastLoginInfo">您上次登录时间信息</string>
    <string name="QQLastLoginTime">&#160;QQ授权&#160;&#160;：</string>
    <string name="userLastLoginTime">账户验证：</string>
    <string name="drawer_menu_info_school">进入官网</string>
    <string name="drawer_menu_developer_system_safe">后台中心</string>
    <string name="drawer_menu_check_update">检查更新</string>
    <string name="drawer_menu_night_mode">夜间模式</string>
    <string name="drawer_menu_about_author">关于作者</string>
    <string name="drawer_menu_logout_title">退出登录</string>
    <string name="drawer_menu_setting_title">软件设置</string>
    <string name="bottom_tab_home">首页</string>
    <string name="bottom_tab_video">视频</string>
    <string name="bottom_tab_micro">微头条</string>
    <string name="bottom_tab_me">我的</string>
    <string name="bottom_tab_category">分类</string>
    <string name="bottom_tab_cart">购物车</string>
    <string name="menu_sousuo">搜索</string>
    <string name="index_tv_assistant">助手专栏</string>
    <string name="index_tv_information">校园资讯</string>
    <string name="loading">正在加载...</string>
    <string name="loading_request_service">正在请求服务器...</string>
    <string name="indexLoadLoginInfo">正在加载登录信息...</string>
    <string name="indexRefresh">正在加载主页信息...</string>
    <string name="indexMine">正在加载我的信息...</string>
    <string name="indexInt">正在请求数据...</string>
    <string name="logoutIng">正在注销...</string>
    <string name="notLogin">未登录</string>
    <string name="apply_cer_ok">跑腿申请审核通过</string>
    <string name="apply_shop_ok">商家申请审核通过</string>
    <string name="apply_cer_not_ok">跑腿申请拒绝成功</string>
    <string name="apply_shop_not_ok">商家申请拒绝成功</string>
    <string name="apply_cer_no">跑腿申请审核失败</string>
    <string name="apply_shop_no">商家申请审核失败</string>
    <string name="apply_cer_not_no">跑腿申请拒绝失败</string>
    <string name="apply_shop_not_no">商家申请拒绝失败</string>
    <string name="apply_cer_info">必须输入审核回复</string>
    <string name="scale_down_show_behavior">work.lpssfxy.www.campuslifeassistantclient.base.behavior.FloatingActionButton.ScaleDownShowBehavior</string>
    <string name="bottom_behavior">work.lpssfxy.www.campuslifeassistantclient.base.behavior.BottomNavigation.BottomNavigationBehavior</string>
</resources>