<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <work.lpssfxy.www.campuslifeassistantclient.base.bottom.BottomBarLayout
        android:id="@+id/bbl"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <work.lpssfxy.www.campuslifeassistantclient.base.bottom.BottomBarItem
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:iconHeight="30dp"
            app:iconWidth="30dp"
            app:itemText="@string/bottom_tab_home"
            app:itemTextSize="10sp"
            app:lottieJson="bottom_home.json"
            app:openTouchBg="true"
            app:textColorNormal="@color/tab_normal_color"
            app:textColorSelected="@color/tab_selected_color"
            app:touchDrawable="@drawable/bottom_selector_bg" />

        <work.lpssfxy.www.campuslifeassistantclient.base.bottom.BottomBarItem
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:iconHeight="30dp"
            app:iconWidth="30dp"
            app:itemText="@string/bottom_tab_category"
            app:itemTextSize="10sp"
            app:lottieJson="bottom_category.json"
            app:openTouchBg="true"
            app:textColorNormal="@color/tab_normal_color"
            app:textColorSelected="@color/tab_selected_color"
            app:touchDrawable="@drawable/bottom_selector_bg"
            app:unreadThreshold="999" />

        <work.lpssfxy.www.campuslifeassistantclient.base.bottom.BottomBarItem
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:iconHeight="30dp"
            app:iconWidth="30dp"
            app:itemText="@string/bottom_tab_cart"
            app:itemTextSize="10sp"
            app:lottieJson="bottom_cart.json"
            app:openTouchBg="true"
            app:textColorNormal="@color/tab_normal_color"
            app:textColorSelected="@color/tab_selected_color"
            app:touchDrawable="@drawable/bottom_selector_bg" />

        <work.lpssfxy.www.campuslifeassistantclient.base.bottom.BottomBarItem
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:iconHeight="30dp"
            app:iconWidth="30dp"
            app:itemText="@string/bottom_tab_me"
            app:itemTextSize="10sp"
            app:lottieJson="bottom_mine.json"
            app:openTouchBg="true"
            app:textColorNormal="@color/tab_normal_color"
            app:textColorSelected="@color/tab_selected_color"
            app:touchDrawable="@drawable/bottom_selector_bg" />

    </work.lpssfxy.www.campuslifeassistantclient.base.bottom.BottomBarLayout>
</LinearLayout>